dev_cluster/namespaces/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
  labels:
    egress: 10.204.254.212
  name: dev
