dev_cluster/namespaces/dev/networkpolicy-allow-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: networkpolicy-allow-ingress
  annotations: 
    app.kubernetes.io/managed-by: argo-git
  namespace: dev
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            network.openshift.io/policy-group: ingress
  podSelector: {}          
  policyTypes:
  - Ingress
