dev_cluster/namespaces/dev/networkpolicy-allow-same-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: networkpolicy-allow-same-ns
  annotations: 
    app.kubernetes.io/managed-by: argo-git
  namespace: dev
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
